# gaia-ws-llm

./: .gitignore  README.md  main.py  pyproject.toml
llm-finetune/: fintune_llm.ipynb  fintune_llm.py  install_with_gpu.txt  requirements.txt
prompt/: README.md  ollama.py  prompt_engineering.ipynb
rag/: rag.ipynb
